kurser er tilføjet i db, tabeller er oprettet, kursister objekter er lavet,